--- a/war/WEB-INF/views/header.jspf
+++ b/war/WEB-INF/views/header.jspf
@@ -9,7 +9,7 @@
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-<script src="resources/js/bootstrap.js?05"></script>
+<script src="resources/js/bootstrap.js"></script>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <style type="text/css">
@@ -33,7 +33,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="javascript:goPage()">Home</a>
+				<a class="navbar-brand" href="javascript:goHome()">Home</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav" style="float: right;">
@@ -49,7 +49,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="dropdown">
+					<li class="dropdown drop-close">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Category <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="javascript:category('')">All</a></li>
