--- a/war/WEB-INF/views/footer.jspf
+++ b/war/WEB-INF/views/footer.jspf
@@ -1,6 +1,6 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
-<form class="mainForm" action="${pageContext.request.contextPath }" method="post">
+<form class="mainForm" action="${pageContext.request.contextPath }/" method="post">
 		<input type="hidden" name="cats" class="cats" value="${searchDTO.cats}" />
 		<input type="hidden" name="term" class="term" value="${searchDTO.term}" />
 		<input type="hidden" name="offset" class="offset" value="${searchDTO.offset}" />
