--- a/war/WEB-INF/views/h_header.jspf
+++ b/war/WEB-INF/views/h_header.jspf
@@ -17,12 +17,24 @@
 	.pagination{margin: 20px 0;}
 	.tlisticon img{width: 60px;}
 	.tlistsize{font-size: 12px;}
-	.tlistname{word-break:break-all;}
+	.tlistname{word-break:break-all;font-weight: bold}
 	.pagination-wrap{text-align: center;}
 	.view-contents{min-height: 300px;}
 	.description-wrap>img{width: 100%;}
 	.down-wrap{margin: 15px 0;}
+	.type-btn{font-size:15px;padding:16px 0 0 20px;}
+	.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse{max-height: 410px;}
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53525461-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -34,8 +46,10 @@
 						class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="javascript:goHome()">Home</a>
+				<a class="navbar-brand type-btn" href="/">Fun</a>
 			</div>
 			<div class="navbar-collapse collapse">
+				
 				<ul class="nav navbar-nav" style="float: right;">
 					<li>
 						<div class="" style="overflow: hidden;margin: 8px 0 0 0;">
@@ -53,6 +67,16 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Category <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="javascript:category('')">All</a></li>
+							<li><a href="javascript:category('7_0')">Art</a></li>
+							<li><a href="javascript:category('7_25')">Art - Anime</a></li> 
+							<li><a href="javascript:category('7_33')">Art - Doujinshi</a></li> 
+							<li><a href="javascript:category('7_27')">Art - Game</a></li> 
+							<li><a href="javascript:category('7_26')">Art - Manga</a></li>
+							<li><a href="javascript:category('7_28')">Art - Picture</a></li> 
+							<li><a href="javascript:category('8_0')">Real Life</a></li> 
+							<li><a href="javascript:category('8_31')">Real Life - Photobooks Picture</a></li> 
+							<li><a href="javascript:category('8_30')">Real Life - Videos</a></li>  
+							 
 						</ul>
 					</li>
 				</ul>
