--- a/war/WEB-INF/views/h_header.jspf
+++ b/war/WEB-INF/views/h_header.jspf
@@ -45,7 +45,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="javascript:goHome()">Home</a>
+				<a class="navbar-brand" href="javascript:goHome('h')">Home</a>
 				<a class="navbar-brand type-btn" href="/">Fun</a>
 			</div>
 			<div class="navbar-collapse collapse">
@@ -57,7 +57,7 @@
 							<input type="text" class="form-control search-input" value="${searchDTO.term}" />
 							</div>
 							<div style="float: left;">
-							<button type="button" class="btn btn-default" onclick="search()">
+							<button type="button" class="btn btn-default" onclick="search('h')">
 							  <span class="glyphicon glyphicon-search"></span>
 							</button>
 							</div>
